
  [ Luca Boccassi ]
  * Do not generate linux-source-$ver stanza in debian/control if
    source is set to disabled in debian/config/defines.
  * linux-perf: explicitly disable the jvmti feature and shared library.
  * Document pkg.linux.nosource in debian/README.source.

  [ Ben Hutchings ]
  * debian/rules.d, debian/rules.real: Restore build of userland headers for
    tools

 -- Luca Boccassi <bluca@debian.org>  Fri, 18 Jan 2019 19:09:06 +0000

linux (4.19.16-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.19.14
    - ax25: fix a use-after-free in ax25_fillin_cb()
    - gro_cell: add napi_disable in gro_cells_destroy
    - ip6mr: Fix potential Spectre v1 vulnerability
    - ipv4: Fix potential Spectre v1 vulnerability
    - ipv6: explicitly initialize udp6_addr in udp_sock_create6()
    - ipv6: tunnels: fix two use-after-free
    - ip: validate header length on virtual device xmit
    - isdn: fix kernel-infoleak in capi_unlocked_ioctl
    - net/wan: fix a double free in x25_asy_open_tty()
    - packet: validate address length
    - packet: validate address length if non-zero
    - ptr_ring: wrap back ->producer in __ptr_ring_swap_queue()
    - sctp: initialize sin6_flowinfo for ipv6 addrs in sctp_inet6addr_event
    - tipc: compare remote and local protocols in tipc_udp_enable()
    - tipc: fix a double free in tipc_enable_bearer()
    - tipc: fix a double kfree_skb()
    - ipv6: frags: Fix bogus skb->sk in reassembled packets
    - ipv6: route: Fix return value of ip6_neigh_lookup() on neigh_create()
      error
    - ALSA: rme9652: Fix potential Spectre v1 vulnerability
    - ALSA: emu10k1: Fix potential Spectre v1 vulnerabilities
    - ALSA: pcm: Fix potential Spectre v1 vulnerability
    - ALSA: emux: Fix potential Spectre v1 vulnerabilities
    - powerpc/fsl: Fix spectre_v2 mitigations reporting
    - usb: r8a66597: Fix a possible concurrency use-after-free bug in