@@ -1,10 +1,0 @@
-SUBDIRS = \
-	hv \
-	lib/bpf \
-	lib/lockdep \
-	objtool \
-	perf \
-	power \
-	usb/usbip
-
-include $(top_rulesdir)/Makefile.inc
